fixed cart overflow

--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@
 
 .hero {
   min-height: calc(100vh - 60px);
-  background: url('../assets/images/hero-bcg.jpeg') center/cover no-repeat;
+  background: url("../assets/images/hero-bcg.jpeg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -171,7 +171,7 @@
   right: 0;
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow-y: auto;
   z-index: 3;
   background: rgb(231, 226, 221);
   padding: 1.5rem;
